--- a/google2.html
+++ b/google2.html
@@ -67,9 +67,9 @@
                 <p>Terms</p>
             </div><br>
             <div class="settings">
-                <p>Advertising</p>
-                <p>Business</p>
-                <p>About</p>
+                <p>Advertising.</p>
+                <p>Business.</p>
+                <p>About.</p>
             </div>
             <hr>
         </footer>
