--- a/project/login/login.html
+++ b/project/login/login.html
@@ -19,7 +19,9 @@
       <form>
         <input type="text" placeholder="Enter your e-mail"><br> <br>
         <input type="text" placeholder="Enter your password"> <br> <br>
-        <button>Login</button>
+       <div class="Button">
+        <button >Login</button>
+       </div>
         <p>Forgot your password?</p>
       </form>
     </div>
